Refs #2792 fix bug: on datasets bottom navigation, box inside second row not aligned to left

--- a/scoreboard/theme/static/css/custom.css
+++ b/scoreboard/theme/static/css/custom.css
@@ -346,7 +346,7 @@ body .addthis_default_style .at300b {
 .navigation-widget div div div {
   background: #E1F0F7;
   display: inline-block;
-  min-height: 160px;
+  min-height: 164px;
   border: 1px solid #FFF;
   vertical-align: top;
   text-align: center;
